@@ -1,5 +1,10 @@
 lib_LTLIBRARIES = libgstreamer-@GST_MAJORMINOR@.la
+AS_LIBTOOL_LIB = libgstreamer-@GST_MAJORMINOR@
+if GST_DISABLE_OMEGA_COTHREADS
+noinst_LTLIBRARIES =
+else
 noinst_LTLIBRARIES = libcothreads.la
+endif
 
 if HAVE_CPU_I386
 GSTARCH_SRCS = gstcpuid_i386.s
@@ -135,7 +140,7 @@ BUILT_SOURCES = \
         $(built_header_make)		\
         $(built_source_make)
 # CLEANFILES is for files generated by make
-CLEANFILES = $(built_header_make) $(built_source_make)
+CLEANFILES = $(built_header_make) $(built_source_make) $(as_dll_cleanfiles)
 # DISTCLEANFILES is for files generated by configure
 DISTCLEANFILES = $(built_header_configure)
                                                                                 
@@ -148,8 +153,9 @@ libgstreamer_@GST_MAJORMINOR@_la_CFLAGS = \
 libgstreamer_@GST_MAJORMINOR@_la_LIBADD = \
 	$(LIBGST_LIBS) $(GST_PARSE_LIBADD) $(GST_REGISTRY_LIBADD) $(VALGRIND_LIBS)
 libgstreamer_@GST_MAJORMINOR@_la_LDFLAGS = \
-	@GST_LT_LDFLAGS@ -version-info @GST_LIBVERSION@ 
-
+	@GST_LT_LDFLAGS@ -version-info @GST_LIBVERSION@ \
+	-export-symbols-regex [_]*\(gst_\|Gst\|GST_\).* \
+	$(as_libtool_LDFLAGS)
 
 libgstreamer_@GST_MAJORMINOR@includedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/gst
 
@@ -215,9 +221,13 @@ noinst_HEADERS = 		\
 	gstarch.h		\
 	cothreads.h		
 
-# the compiler shoots cothreads.c in the head at -O6
+if GST_DISABLE_OMEGA_COTHREADS
+#libcothreads_la_SOURCES =
+#libcothreads_la_CFLAGS =
+else
 libcothreads_la_SOURCES = cothreads.c
 libcothreads_la_CFLAGS = $(libgstreamer_@GST_MAJORMINOR@_la_CFLAGS) 
+endif
 
 
 gstmarshal.h: gstmarshal.list
@@ -248,4 +258,13 @@ gstenumtypes.c: $(gst_headers)
 	--vtail "      { 0, NULL, NULL }\n    };\n    etype = g_@type@_register_static (\"@EnumName@\", values);\n  }\n  return etype;\n}\n" \
 	$^ > gstenumtypes.c
 
-EXTRA_DIST = ROADMAP
+noinst_DATA = $(as_libtool_noinst_DATA_files)
+
+EXTRA_DIST = ROADMAP $(as_libtool_EXTRA_DIST)
+
+install-data-local: as-libtool-install-data-local
+
+uninstall-local: as-libtool-uninstall-local
+
+include $(top_srcdir)/common/as-libtool.mak
+
